[workspace]
members = [
    "recursion/circuit",
    "recursion/recursion-types",
    "recursion/wrapper-circuit",
    "service",
]
resolver = "2"


[profile.dev]
opt-level = 3

[workspace.dependencies]
# Helios ZK Light Client Dependencies
helios-program = { package = "sp1-helios-program", git = "https://github.com/timewave-computer/sp1-helios", branch = "valence-compat" }
helios-operator = { package = "sp1-helios-script", git = "https://github.com/timewave-computer/sp1-helios", branch = "valence-compat" }
helios-consensus-core = { git = "https://github.com/a16z/helios", tag = "0.8.6" }
helios-ethereum = { git = "https://github.com/a16z/helios", tag = "0.8.6" }
sp1-helios-primitives = { package = "sp1-helios-primitives", git = "https://github.com/timewave-computer/sp1-helios", branch = "valence-compat" }

tokio = { version = "1.41.1", features = ["full"] }
alloy = { version = "0.12.5", features = ["full"] }
alloy-primitives = { version = "0.8.25", features = ["rlp"] }
alloy-sol-types = "0.8.15"
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11.2"
dotenvy = "0.15.7"
anyhow = "1.0.98"
reqwest = "0.12.15"
serde_json = "1.0.105"
itertools = "0.14"
sha2 = "0.10.8"

sp1-zkvm = { git = "https://github.com/timewave-computer/sp1", branch = "jonas/fix-4.1.7-syscall" }
sp1-sdk = { git = "https://github.com/timewave-computer/sp1", branch = "jonas/fix-4.1.7-syscall", features = [
    "native-gnark",
] }
# not a custom branch, just a small deps fix for the release tag 4.1.7
sp1-verifier = { git = "https://github.com/timewave-computer/sp1", branch = "jonas/fix-4.1.7-syscall" }
borsh = { version = "1.5.5", features = ["derive"] }

recursion-types = { path = "recursion/recursion-types" }
beacon-electra = { path = "beacon-electra" }

[patch.crates-io]
bls12_381 = { git = "https://github.com/sp1-patches/bls12_381", tag = "patch-0.8.0-sp1-4.0.0" }
sha2-v0-9-9 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.9.9-sp1-4.0.0" }
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.10.8-sp1-4.0.0" }
sha3-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha3", tag = "patch-sha3-0.10.8-sp1-4.0.0" }
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", tag = "patch-2.0.2-sp1-4.0.0" }
ethereum_hashing = { git = "https://github.com/ncitron/ethereum_hashing", rev = "7ee70944ed4fabe301551da8c447e4f4ae5e6c35" }
